package dto;
/**
 * @author: Lukas Åkefeldt, s242204
 */
public class RegistrationDto {
    public String firstName;
    public String lastName;
    public String cpr;
    public String bankAccount;
}
